Fix text wrap on links

--- a/public/styles.css
+++ b/public/styles.css
@@ -26,6 +26,7 @@ a,
 a:visited {
 	color: #0d6efd;
 	text-decoration: none;
+	word-break: break-all;
 }
 
 a:hover {
